--- a/usr/share/serenekun/etc/skel/.config/xfce4/panel/launcher-19/15578329511.desktop
+++ b/usr/share/serenekun/etc/skel/.config/xfce4/panel/launcher-19/15578329511.desktop
@@ -1,28 +1,17 @@
 [Desktop Entry]
-Name=Flast Gecko Nightly
+Version=1.0
+Name=Firefox
 GenericName=Web Browser
-GenericName[ar]=متصفح وِب
-GenericName[ast]=Restolador Web
-GenericName[bn]=ওয়েব ব্রাউজার
 GenericName[ca]=Navegador web
 GenericName[cs]=Webový prohlížeč
-GenericName[da]=Webbrowser
-GenericName[de]=Webbrowser
-GenericName[el]=Περιηγητής διαδικτύου
 GenericName[es]=Navegador web
-GenericName[et]=Veebibrauser
 GenericName[fa]=مرورگر اینترنتی
 GenericName[fi]=WWW-selain
 GenericName[fr]=Navigateur Web
-GenericName[gl]=Navegador Web
-GenericName[he]=דפדפן אינטרנט
-GenericName[hr]=Web preglednik
 GenericName[hu]=Webböngésző
 GenericName[it]=Browser Web
 GenericName[ja]=ウェブ・ブラウザ
 GenericName[ko]=웹 브라우저
-GenericName[ku]=Geroka torê
-GenericName[lt]=Interneto naršyklė
 GenericName[nb]=Nettleser
 GenericName[nl]=Webbrowser
 GenericName[nn]=Nettlesar
@@ -30,40 +19,20 @@ GenericName[no]=Nettleser
 GenericName[pl]=Przeglądarka WWW
 GenericName[pt]=Navegador Web
 GenericName[pt_BR]=Navegador Web
-GenericName[ro]=Navigator Internet
-GenericName[ru]=Веб-браузер
 GenericName[sk]=Internetový prehliadač
-GenericName[sl]=Spletni brskalnik
 GenericName[sv]=Webbläsare
-GenericName[tr]=Web Tarayıcı
-GenericName[ug]=توركۆرگۈ
-GenericName[uk]=Веб-браузер
-GenericName[vi]=Trình duyệt Web
-GenericName[zh_CN]=网络浏览器
-GenericName[zh_TW]=網路瀏覽器
 Comment=Browse the Web
-Comment[ar]=تصفح الوِب
-Comment[ast]=Restola pela Rede
-Comment[bn]=ইন্টারনেট ব্রাউজ করুন
 Comment[ca]=Navegueu per el web
 Comment[cs]=Prohlížení stránek World Wide Webu
-Comment[da]=Surf på internettet
 Comment[de]=Im Internet surfen
-Comment[el]=Μπορείτε να περιηγηθείτε στο διαδίκτυο (Web)
 Comment[es]=Navegue por la web
-Comment[et]=Lehitse veebi
 Comment[fa]=صفحات شبکه جهانی اینترنت را مرور نمایید
 Comment[fi]=Selaa Internetin WWW-sivuja
-Comment[fr]=Naviguer sur le Web
-Comment[gl]=Navegar pola rede
-Comment[he]=גלישה ברחבי האינטרנט
-Comment[hr]=Pretražite web
+Comment[fr]=Navigue sur Internet
 Comment[hu]=A világháló böngészése
 Comment[it]=Esplora il web
 Comment[ja]=ウェブを閲覧します
 Comment[ko]=웹을 돌아 다닙니다
-Comment[ku]=Li torê bigere
-Comment[lt]=Naršykite internete
 Comment[nb]=Surf på nettet
 Comment[nl]=Verken het internet
 Comment[nn]=Surf på nettet
@@ -71,30 +40,22 @@ Comment[no]=Surf på nettet
 Comment[pl]=Przeglądanie stron WWW
 Comment[pt]=Navegue na Internet
 Comment[pt_BR]=Navegue na Internet
-Comment[ro]=Navigați pe Internet
-Comment[ru]=Доступ в Интернет
 Comment[sk]=Prehliadanie internetu
-Comment[sl]=Brskajte po spletu
 Comment[sv]=Surfa på webben
-Comment[tr]=İnternet'te Gezinin
-Comment[ug]=دۇنيادىكى توربەتلەرنى كۆرگىلى بولىدۇ
-Comment[uk]=Перегляд сторінок Інтернету
-Comment[vi]=Để duyệt các trang web
-Comment[zh_CN]=浏览互联网
-Comment[zh_TW]=瀏覽網際網路
-Exec=/opt/flast-gecko-nightly/firefox %u
-Icon=flast-gecko-nightly
+Exec=firefox %u
+Icon=firefox
 Terminal=false
 Type=Application
 MimeType=text/html;text/xml;application/xhtml+xml;application/vnd.mozilla.xul+xml;text/mml;x-scheme-handler/http;x-scheme-handler/https;
 StartupNotify=true
-StartupWMClass=Nightly
 Categories=Network;WebBrowser;
 Keywords=web;browser;internet;
-Actions=new-window;new-private-window;
+Actions=new-window;new-private-window;profile-manager-window;
+
+X-Desktop-File-Install-Version=0.26
 
 [Desktop Action new-window]
-Name=New Window
+Name=Open a New Window
 Name[ach]=Dirica manyen
 Name[af]=Nuwe venster
 Name[an]=Nueva finestra
@@ -199,10 +160,10 @@ Name[wo]=Palanteer bu bees
 Name[xh]=Ifestile entsha
 Name[zh_CN]=新建窗口
 Name[zh_TW]=開新視窗
-Exec=/opt/flast-gecko-nightly/firefox --new-window %u
+Exec=firefox --new-window %u
 
 [Desktop Action new-private-window]
-Name=New Private Window
+Name=Open a New Private Window
 Name[ach]=Dirica manyen me mung
 Name[af]=Nuwe privaatvenster
 Name[an]=Nueva finestra privada
@@ -262,8 +223,8 @@ Name[km]=បង្អួចឯកជនថ្មី
 Name[kn]=ಹೊಸ ಖಾಸಗಿ ಕಿಟಕಿ
 Name[ko]=새 사생활 보호 모드
 Name[kok]=नवो खाजगी विंडो
-Name[ks]=نْو پرایوٹ وینڈو
-Name[lij]=Nêuvo barcón privòu
+Name[ks]=نْو پرایوٹ وینڈو&amp;
+Name[lij]=Neuvo barcon privou
 Name[lo]=ເປີດຫນ້າຕ່າງສວນຕົວຂື້ນມາໃຫມ່
 Name[lt]=Naujas privataus naršymo langas
 Name[ltg]=Jauns privatais lūgs
@@ -307,4 +268,9 @@ Name[wo]=Panlanteeru biir bu bees
 Name[xh]=Ifestile yangasese entsha
 Name[zh_CN]=新建隐私浏览窗口
 Name[zh_TW]=新增隱私視窗
-Exec=/opt/flast-gecko-nightly/firefox --private-window %u
+Exec=firefox --private-window %u
+
+[Desktop Action profile-manager-window]
+Name=Open the Profile Manager
+Name[cs]=Správa profilů
+Exec=firefox --ProfileManager
